--- a/style/style.css
+++ b/style/style.css
@@ -407,3 +407,115 @@ body{
     background-color: #509cff7d;
     text-align: center;
 }
+
+/* PÁGINA DE ENVÍOS */
+
+/* PRIMEA SECCIÓN - CONSULTA */
+
+.consulta__envio{
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid;
+    /* height: 400px; */
+}
+
+.formulario__title__consulta{
+    outline: 1px solid;
+    padding: 20px 0;
+    font-size: var(--titulos-principales);
+    text-align: center;
+    background-color: var(--azul-terciario);
+}
+
+.formulario__consulta{
+    background-color: white;
+    padding: 60px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+
+.formulario__input1{
+    height: 45px;
+    padding: 0 10px;
+    font-size: 1.1rem;
+    border-radius: 0;
+    outline: 1px solid;
+    border: 0;
+    width: 100%;
+    background-color: #EFEFEF;
+}
+
+/* Seccion 2 pagina 2 */
+
+.container__envios{
+    width: 90%;
+    max-width: 1200px;
+    /* outline: 1px solid black; */
+    padding: 60px 0;
+    padding-bottom: 20px;
+    /*overflow: hidden;*/ 
+}
+
+.container__envios2{
+    width: 90%;
+    max-width: 1200px;
+    /* outline: 1px solid black; */
+    padding: 60px 0;
+    padding-top: 20px;
+    /*overflow: hidden;*/ 
+}
+
+.div__dimensiones{
+    width: 100%;
+    /* outline: 1px solid; */
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.formulario__input2{
+    height: 45px;
+    padding: 0 10px;
+    font-size: 1.1rem;
+    border-radius: 0;
+    outline: 1px solid;
+    border: 0;
+    width: 250px;
+    background-color: #EFEFEF;
+}
+.consulta__envio2{
+    display: flex;
+    justify-content: center;
+    /* border-top: 1px solid; */
+    /* height: 400px; */
+}
+
+.cotizacion{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20PX;
+    align-items: center;
+    /* outline: 1px solid; */
+    margin-top: 20px;
+}
+
+.formulario__boton__cotizacion{
+    padding: 10px 0;
+    width: 400px;
+    background-color: var(--azul-terciario);
+    border: 1px solid black;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: inherit;
+}
+
+.cotizacion__parrafo{
+    outline: 1px solid;
+    padding: 10px 0;
+    width: 400px;
+    text-align: center;
+    background-color: #EFEFEF;
+}
