--- a/style/style.css
+++ b/style/style.css
@@ -624,3 +624,133 @@ body{
 .boton:hover{
     background-color: #3b7dc4;
 }
+
+/**DESTINOS**/
+
+
+.titulo__destinos{
+    text-align: center;
+    font-size: 2rem;
+}
+
+/*SLIDER*/
+
+.slider-frame{
+    max-width: 1280px;
+    width: 90%;
+    height: auto;
+    margin: 50px auto 50px;
+    overflow: hidden;
+
+}
+
+.slider-frame ul{
+    display: flex;
+    padding: 0;
+    width: 600%;
+
+    animation: slide 42s infinite ease-in-out;
+}
+
+.slider-frame li{
+    list-style: none;
+    width: 100%;
+    position: relative;
+}
+
+.slider-frame img{
+    width: 100%;
+}
+
+
+@keyframes slide{
+    0%   { margin-left: 0%;}
+  13.33% { margin-left: 0%;}
+
+  16.66% { margin-left: -100%;}
+  29.99% { margin-left: -100%;}
+
+  33.33% { margin-left: -200%;}
+  46.66% { margin-left: -200%;}
+
+  49.99% { margin-left: -300%;}
+  63.32% { margin-left: -300%;}
+
+  66.66% { margin-left: -400%;}
+  79.99% { margin-left: -400%;}
+
+  83.33% { margin-left: -500%;}
+  96.66% { margin-left: -500%;}
+
+  100%   { margin-left: 0%;}
+}
+
+
+/*BOTON*/
+
+.boton__destinos{
+    color: white;
+    text-decoration: none;
+    border: 1px solid #FFF;
+    border-radius: 10px;
+    padding-left: 1.8rem;
+    padding-right: 1.8rem;
+}
+
+.boton__destinos:hover{
+    color: black;
+    background-color: #FFF;
+    text-decoration: underline;
+}
+
+/*TEXTO*/
+
+.texto__destinos{
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+     /* Mueve el elemento -50% de su 
+     propio ancho y alto para centrarlo perfectamente */
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    max-width: 80%;
+    color: #fff;
+
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    color: #fff;
+   /* Nivel de apilamiento (para superponer elementos) */
+    z-index: 2;
+}
+
+.texto__destinos p{
+    margin-bottom: 15px;
+}
+
+.texto__destinos h2{
+    font-size: 45px;
+    /*margin-bottom: 12px;*/
+    white-space: nowrap;
+}
+
+.texto__destinos:hover{
+    backdrop-filter: blur(3px);
+    transition: .5s;
+}
+ 
+@media (max-width: 768px){
+    .texto__destinos{
+        max-width: 90%;
+        padding: 15px;
+    }
+    
+    .texto__destinos h2{
+        font-size: 30px;
+    }
+
+    .texto__destinos p{
+        font-size: 14px;
+    }
+
+}
