--- a/style/style.css
+++ b/style/style.css
@@ -520,11 +520,20 @@ body{
     background-color: #EFEFEF;
 }
 
+
+
+
 /* PÁGINA DE REGISTRO */
+
+
 
 /*Background*/
 
 .container__register{
+
+    --transform-img-register: translate(-100%);
+    --transform-form-register: translate(-90%);
+
     margin: auto;
     width: 90%;
     max-width: 400px;
@@ -535,9 +544,18 @@ body{
     padding: 10px;
 }
 
-.img__register img{
-    max-width: 100%;
+.bg-registro{
+
+    inset: 0;
+    display: flex;
     height: auto;
+}
+
+@media (width <= 750px){
+
+    .bg-registro{
+        transform: var(--transform-img-register);
+    }
 }
     
 /* FORMULARIO*/
@@ -553,6 +571,13 @@ body{
     flex-direction: column;
     box-shadow: 0 0 16px 2px rgba(148,195,255,255);
     color: rgb(12, 12, 12);
+}
+
+@media(width<=750px){
+    .form{
+        transform: var(--transform-form-register);
+    }
+
 }
 
 .form__registro h4{
@@ -624,6 +649,8 @@ body{
 .boton:hover{
     background-color: #3b7dc4;
 }
+
+
 
 /**DESTINOS**/
 
