--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 
     /*Tamaño*/
     --titulos-principales: 2rem;
+    --titulos-principales-responsive: 1.6rem;
 }
 
 *{
@@ -30,7 +31,7 @@ body{
     max-width: 1200px;
     /* outline: 1px solid black; */
     padding: 40px 0;
-    /*overflow: hidden;*/ 
+    overflow: hidden; /*Ocultamos lo que sobresale*/
 }
 
 .container{
@@ -38,7 +39,7 @@ body{
     max-width: 1200px;
     /* outline: 1px solid black; */
     padding: 60px 0;
-    /*overflow: hidden;*/ 
+    overflow: hidden;
 }
 
 /* PRIMERA SESIÓN */
@@ -103,11 +104,17 @@ body{
     width: 20px;
 }
 
+.icono__hamburguesa{
+    display: none;
+}
+
 /* TERCERA SECCIÓN */
 
 .container__compra{
     padding-top: 104px;
     padding-bottom: 104px;
+    display: flex;
+    justify-content: center;
 }
 
 .compra__pasajes{
@@ -118,7 +125,7 @@ body{
 }
 
 .formulario{
-    width: 100%;
+    width: 99%;
     outline: 1px solid;
     border-radius: 10px;
     overflow: hidden;
@@ -181,7 +188,13 @@ body{
     background-color: var(--azul-terciario);
     border: 1px solid black;
     cursor: pointer;
+    transition: background-color 1s;
 }
+
+.formulario__boton:hover{
+    --azul-terciario: #8db5ea;
+    background-color: var(--azul-terciario);
+    }
 
 /* CUARTA SECCIÓN - NOTICIAS*/
 
@@ -221,6 +234,13 @@ body{
     align-items: center;
 }
 
+.noticias{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .target__noticia{
     /* outline: 1px solid; */
     width: 250px;
@@ -233,6 +253,7 @@ body{
     gap: 10px;
     background-color: var(--azul-terciario);
     box-shadow: 0 0 14px 2px rgb(89, 89, 215);
+    overflow: hidden;
 }
 
 .target__paragraph{
@@ -254,12 +275,16 @@ body{
 
 .container__questions{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .article__all{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 99%;
 }
 
 .article__questions{
@@ -520,12 +545,7 @@ body{
     background-color: #EFEFEF;
 }
 
-
-
-
 /* PÁGINA DE REGISTRO */
-
-
 
 /*Background*/
 
@@ -783,6 +803,216 @@ body{
 
     .texto__destinos p{
         font-size: 14px;
+    }
+
+}
+
+/* ============ MEDIA QUERIES PÁGINA PRINCIPAL ============ */
+@media (max-width: 1200px) {
+
+    /* SEGUNDA SESIÓN */
+    .menu{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        /* outline: 1px solid; */
+    }
+
+    .menu__img{
+        height: 70px;
+    }
+
+    .icono__hamburguesa{
+        display: block;
+        height: 40px;
+        margin: 40px;
+        cursor: pointer;
+        z-index: 10;
+    }
+
+    .icono__hamburguesa--active{
+        stroke: white;
+        position: fixed;
+        bottom: 73%;
+        right: 5%;
+    }
+
+    .menu__navegacion{
+        display: none;
+    }
+
+    .menu__navegacion--active{
+        display: flex;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 10;
+    }
+
+    .menu__ul{
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        align-items: center;
+        height: 100%;
+        justify-content: center;
+        gap: 20px;
+        font-size: 1.2rem;
+        background-color: black;
+        width: 100%;
+        height: 100%;
+    }
+
+    .menu__li a{
+        text-decoration: none;
+        color: white;
+    }
+
+    .menu__li__search{
+        width: 20px;
+    }
+
+    /* TERCERA SECCIÓN */
+    .container__compra{
+        padding-top: 104px;
+        padding-bottom: 104px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .formulario__title{
+        font-size: var(--titulos-principales-responsive);
+    }
+
+    .formulario__compra{
+        padding: 40px;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        flex-wrap: nowrap;
+    }
+
+    .formulario__input{
+        width: 100%;
+    }
+
+    .contenedor__inputs__compra{
+        width: 100%;
+    }
+
+    .formulario__boton{
+        padding: 10px 30px;
+        background-color: var(--azul-terciario);
+        border: 1px solid black;
+        cursor: pointer;
+        width: 100%;
+    }
+
+    /* CUARTA SECCIÓN - NOTICIAS*/
+
+    .title{
+        text-transform: uppercase;
+        margin-bottom: 40px;
+        font-size: var(--titulos-principales-responsive);
+    }
+
+    .target__contenedor__imagen{
+        width: 100%;
+        height: 140px;
+        overflow: hidden;
+        /* outline: 1px solid; */
+        border-radius: 10px;
+    }
+
+    .target__img{
+        width: 110%;
+        object-fit: cover;
+    }
+
+    .div__noticias{
+        display: flex;
+        
+        /* outline: 1px solid; */
+        justify-content: space-between;
+        align-items: center;
+        height: 400px;
+        overflow: hidden;
+    }
+    
+    .noticias{
+        padding: 30px;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: space-around;
+        align-items: start;
+        flex-wrap: wrap;
+        gap: 40px;
+    }
+
+    /* Seccion 5 - Preguntas frecuentes */
+    /* Nada por modificar */
+
+    /* Sexta sección - opiniones */
+
+    .publicacion__opiniones{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .opinion__stars{
+        display: flex;
+        align-items: center;
+    }
+
+    .article__publicacion__opiniones{
+        width: 100%;
+    }
+
+    .opinion__publicada{
+        width: 100%;
+        height: 120px;
+    }
+
+    /* Seccion logos */
+    .section__logos{
+        background-color: var(--azul-terciario);
+    }
+
+    .container__logos{
+        display: flex;
+        gap: 70px;
+    }
+
+    .logo{
+        height: 80px;
+    }
+
+    /* Footer */
+
+    .section__footer{
+        background-color: #95c5ff87;
+    }
+
+    .container__footer{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .logo__footer{
+        display: none;
+    }
+
+    .section__copyright{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        background-color: #509cff7d;
+        text-align: center;
     }
 
 }
