--- a/style/style.css
+++ b/style/style.css
@@ -790,7 +790,43 @@ body{
     backdrop-filter: blur(3px);
     transition: .5s;
 }
- 
+ /* Transparencia */
+
+.section__transparencia{
+    border-top: 1px solid black;
+}
+
+.container__transparencia{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.article__all__transparencia{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 99%;
+}
+
+.article__transparencia{
+    display: flex;
+    align-items: center;
+    outline: 1px solid;
+    /* background-color: white; */
+    background-color: var(--azul-terciario);
+    /* border-radius: 10px; */
+
+    padding: 10px 20px;
+    justify-content: space-between;
+}
+
+.questions__img__transparencia{
+    width: 30px;
+    cursor: pointer;
+}
+
 @media (max-width: 768px){
     .texto__destinos{
         max-width: 90%;
@@ -1014,5 +1050,15 @@ body{
         background-color: #509cff7d;
         text-align: center;
     }
+/* Transparencia */
+
+    .container__transparencia{
+        text-align: start;
+    }
+
+    .transparencia__title{
+        text-align: center;
+    }
+}
 
 }
